# Ps1-Emulator

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  ps1emu.conf  reference.ppm  roadmap.md
assets/: org.ps1emu.PS1Emu.desktop
assets/fonts/: README.txt
docs/: architecture.md  gui_setup.md  plugin_protocol.md  testing.md  ui_ux.md
flatpak/: org.ps1emu.PS1Emu.yml
include/ps1emu/: plugin_api.h  sandbox.h
plugins/cdrom_stub/: main.cpp
plugins/gpu_stub/: main.cpp
plugins/input_stub/: main.cpp
plugins/spu_stub/: main.cpp
scripts/: gpu_frame_dump.py  ppm_diff.py  ppm_make_reference.py  ps1emu_gui_wrapper.sh
src/: main.cpp
src/core/: app_paths.cpp  app_paths.h  bios.cpp  bios.h  cdrom_image.cpp  cdrom_image.h  config.cpp  config.h  config_paths.cpp  config_paths.h  cpu.cpp  cpu.h  cpu_state.h  dynarec.cpp  dynarec.h  emu_core.cpp  emu_core.h  gpu_commands.cpp  gpu_commands.h  gpu_packets.cpp  gpu_packets.h  gte.cpp  gte.h  memory_map.cpp  memory_map.h  mmio.cpp  mmio.h  scheduler.cpp  scheduler.h  xa_adpcm.cpp  xa_adpcm.h
src/plugins/: ipc.cpp  ipc.h  plugin_host.cpp  plugin_host.h
src/ui/: gui_app.cpp  gui_app.h  gui_main.cpp  main.cpp  sdl_backend.cpp  sdl_backend.h  text_ui.cpp  text_ui.h
tests/: emulator_tests.cpp
